app/layout.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Home.css */
html,
body {
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Arial', sans-serif;
    background-image: url('/image-background-1@2x.png');
    background-size: cover;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-position: center;
    background-attachment: fixed;
}

.content
{
    height: 100vh;
    width: 100%;
}

.content_top
{
    min-height: 100%;
    padding-top: 20vh;
    height: 80vh;
    padding-left: 10vh;
    padding-right: 10vh;
    padding-bottom: 150vh;
}

.content_bottom {
    min-height: 100%;
    width: 100%;
    padding-top: 15vh;
    height: 85vh;
    padding-left: 10vh;
    background-image: url('/image-medium-1@2x.png');
    background-size: cover;
    background-position: center;
}

.block_white {
    background: rgba(196, 188, 188, 0.827);
    padding: 20px;
    color:"black";
    border-radius: 10px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
}

.alert-red {
    background: rgba(255, 0, 0, 0.5);
    border-radius: 10px;
    padding: 10px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
    text-align: center;
    color: 'black';
}

.alert-green {
    background: rgba(0, 255, 0, 0.5);
    border-radius: 10px;
    padding: 10px;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
    text-align: center;
    color: 'black';
}

